# cli_select

./: README.md  pyproject.toml  test.py
src/cli_select/: __init__.py  helper.py
